--- a/Result-new.html
+++ b/Result-new.html
@@ -271,11 +271,28 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
       "4e": { "Mood Multiplier": 2, "Claimed & Trained": 2, "Provoker": 2, "Heatwave": 2, "Generous Giver": 1, "Promiscuous Plaything": 1 }
     },
     q5: {
-      "5a": { "Promiscuous Plaything": 3, "Punish Me": 1 },
-      "5b": { "Bedroom Adventurer": 3, "Generous Giver": 2 },
-      "5c": { "Devoted Darling": 3, "Tender Protector": 3, "Mood Multiplier": 3, "Heatwave": 3 },
-      "5d": { "Dungeon Master": 3, "Charmer in Charge": 2, "Provoker": 1, "Bedroom Adventurer": 1 }
-    },
+  "5a": {
+    "Dungeon Master": 3,
+    "Tender Protector": 3,
+    "Heatwave": 3,
+    "Provoker": 3,
+    "Bedroom Adventurer": 3
+  },
+  "5b": {
+    "Promiscuous Plaything": 3,
+    "Generous Giver": 3
+  },
+  "5c": {
+    "Devoted Darling": 3,
+    "Mood Multiplier": 3
+  },
+  "5d": {
+    "Bedroom Adventurer": 3
+  },
+  "5e": {
+    "Claimed & Trained": 3
+  }
+}
     q6: {
       "6a": { "Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1 },
       "6b": { "Provoker": 3, "Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1 },
@@ -283,11 +300,40 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
       "6d": { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Bedroom Adventurer": 2, "Claimed & Trained": 1, "Dungeon Master": 1 }
     },
     q7: {
-      "7a": { "Devoted Darling": 3, "Tender Protector": 2, "Dungeon Master": 1 },
-      "7b": { "Mood Multiplier": 3, "Generous Giver": 2, "Heatwave": 1 },
-      "7c": { "Bedroom Adventurer": 3, "Promiscuous Plaything": 2, "Charmer in Charge": 1 },
-      "7d": { "Provoker": 3, "Punish Me": 2, "Bedroom Adventurer": 1 }
-    },
+  "7a": {
+    "Heatwave": 3,
+    "Mood Multiplier": 2,
+    "Generous Giver": 1,
+    "Claimed & Trained": 2
+  },
+  "7b": {
+    "Charmer in Charge": 3,
+    "Bedroom Adventurer": 2
+  },
+  "7c": {
+    "Dungeon Master": 3,
+    "Charmer in Charge": 2,
+    "Provoker": 1,
+    "Tender Protector": 2
+  },
+  "7d": {
+    "Claimed & Trained": 3,
+    "Devoted Darling": 2,
+    "Mood Multiplier": 1,
+    "Promiscuous Plaything": 1
+  },
+  "7e": {
+    "Generous Giver": 3,
+    "Tender Protector": 3,
+    "Devoted Darling": 3,
+    "Heatwave": 3
+  },
+  "7f": {
+    "Punish Me": 3,
+    "Claimed & Trained": 2
+    // Mood Multiplier has been removed as requested
+  }
+}
     q9: {
       "9a": { "Dungeon Master": 6, "Charmer in Charge": 6, "Tender Protector": 6 },
       "9b": { "Claimed & Trained": 6, "Devoted Darling": 6, "Promiscuous Plaything": 6 },
