--- a/Result-new.html
+++ b/Result-new.html
@@ -292,7 +292,7 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
   "5e": {
     "Claimed & Trained": 3
   }
-}
+},
     q6: {
       "6a": { "Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1 },
       "6b": { "Provoker": 3, "Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1 },
@@ -301,25 +301,16 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
     },
     q7: {
   "7a": {
-    "Heatwave": 3,
-    "Mood Multiplier": 2,
-    "Generous Giver": 1,
-    "Claimed & Trained": 2
+    "Claimed & Trained": 2,
+    "Dungeon Master": 2
   },
   "7b": {
-    "Charmer in Charge": 3,
-    "Bedroom Adventurer": 2
+    "Generous Giver": 3
   },
   "7c": {
-    "Dungeon Master": 3,
-    "Charmer in Charge": 2,
-    "Provoker": 1,
     "Tender Protector": 2
   },
   "7d": {
-    "Claimed & Trained": 3,
-    "Devoted Darling": 2,
-    "Mood Multiplier": 1,
     "Promiscuous Plaything": 1
   },
   "7e": {
@@ -327,11 +318,6 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
     "Tender Protector": 3,
     "Devoted Darling": 3,
     "Heatwave": 3
-  },
-  "7f": {
-    "Punish Me": 3,
-    "Claimed & Trained": 2
-    // Mood Multiplier has been removed as requested
   }
 }
     q9: {
