--- a/Result-new.html
+++ b/Result-new.html
@@ -320,6 +320,14 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
     "Heatwave": 3
   }
 }
+q8: {
+  "8a": { "Dungeon Master": 3, "Tender Protector": 3 },
+  "8b": { "Mood Multiplier": 3, "Heatwave": 2 },
+  "8c": { "Devoted Darling": 3, "Claimed & Trained": 2 },
+  "8d": { "Bedroom Adventurer": 3 },
+  "8e": { "Generous Giver": 3, "Promiscuous Plaything": 3 },
+  "8f": { "Charmer in Charge": 3, "Provoker": 2 }
+}
     q9: {
       "9a": { "Dungeon Master": 6, "Charmer in Charge": 6, "Tender Protector": 6 },
       "9b": { "Claimed & Trained": 6, "Devoted Darling": 6, "Promiscuous Plaything": 6 },
