--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -254,6 +254,7 @@
     <div class="field">
   <label for="height">Height</label>
   <select id="height">
+    <option disabled selected>Select your height</option>
   </select>
 </div>
   </div>
@@ -300,8 +301,11 @@
   <select id="tyle">
     <option value="tall">Tall</option>
     <option value="confident">Confident & funny</option>
-    <option value="brunettes">Brunnetes</option>
-    <option value="blonde">Blondes</option>
+    <option value="brunette">Brunette</option>
+    <option value="blonde">Blonde</option>
+    <option value="latin">Latin</option>
+    <option value="asian">Asian</option>
+    <option value="black">Black</option>
     <option value="prefer">Prefer not to say</option>
   </select>
 </div>
@@ -309,7 +313,7 @@
 <div class="field">
   <label>Fantasies</label>
   <select id="fantasies">
-    <option value="voyeurism">Being watched</option>
+    <option value="exhibitionism">Being watched</option>
     <option value="submission">Giving up control</option>
     <option value="dominance">Taking control</option>
     <option value="roleplay">Roleplay & costumes</option>
@@ -317,19 +321,7 @@
     <option value="prefer">Prefer not to say</option>
   </select>
 </div>
-
-<div class="field">
-  <label>Kinks</label>
-  <select id="kinks">
-    <option value="prefer">Prefer not to say</option>
-    <option value="role_play">Role play</option>
-    <option value="impact">Spanking & impact play</option>
-    <option value="body_worship">Body worship</option>
-    <option value="bdsm">BDSM & power play</option>
-    <option value="voyeur">Voyeurism & exhibition</option>
-  </select>
-</div>
-
+  
 <div class="field">
   <label>Looking For</label>
   <select id="lookingFor">
