--- a/Result-new.html
+++ b/Result-new.html
@@ -259,16 +259,16 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
       "2g": { "Promiscuous Plaything": 3, "Generous Giver": 2, "Punish Me": 1 }
     },
     q3: {
-      "3a": { "Devoted Darling": 7, "Mood Multiplier": 7, "Tender Protector": 7, "Generous Giver": 7, "Heatwave": 7 },
-      "3b": { "Promiscuous Plaything": 7, "Bedroom Adventurer": 7, "Charmer in Charge": 7, "Mood Multiplier": 7, "Generous Giver": 7 },
-      "3c": { "Dungeon Master": 7, "Claimed & Trained": 7, "Punish Me": 7, "Provoker": 7 }
+      "3a": { "Devoted Darling": 8, "Mood Multiplier": 8, "Tender Protector": 8, "Heatwave": 8 },
+      "3b": { "Promiscuous Plaything": 8, "Bedroom Adventurer": 8, "Charmer in Charge": 8, "Generous Giver": 8 },
+      "3c": { "Dungeon Master": 8, "Claimed & Trained": 8, "Punish Me": 8, "Provoker": 8 }
     },
     q4: {
       "4a": { "Devoted Darling": 3, "Mood Multiplier": 2, "Generous Giver": 1, "Tender Protector": 1 },
       "4b": { "Punish Me": 3, "Bedroom Adventurer": 2, "Charmer in Charge": 1, "Heatwave": 1 },
       "4c": { "Dungeon Master": 3, "Provoker": 2, "Charmer in Charge": 1 },
       "4d": { "Dungeon Master": 3, "Charmer in Charge": 2, "Tender Protector": 1 },
-      "4e": { "Mood Multiplier": 2, "Claimed & Trained": 2, "Provoker": 2, "Heatwave": 2, "Generous Giver": 1, "Promiscuous Plaything": 1 }
+      "4e": { "Mood Multiplier": 2, "Claimed & Trained": 2, "Provoker": 2, "Heatwave": 2, "Generous Giver": 2, "Promiscuous Plaything": 1 }
     },
     q5: {
   "5a": {
@@ -294,7 +294,7 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
   }
 },
     q6: {
-      "6a": { "Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1 },
+      "6a": { "Mood Multiplier": 2, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1, "Generous Giver": 1},
       "6b": { "Provoker": 3, "Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1 },
       "6c": { "Devoted Darling": 3, "Tender Protector": 2, "Generous Giver": 1, "Mood Multiplier": 1 },
       "6d": { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Bedroom Adventurer": 2, "Claimed & Trained": 1, "Dungeon Master": 1 }
@@ -331,7 +331,7 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
       "10b": { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Tender Protector": 2, "Heatwave": 2, "Generous Giver": 1 },
       "10c": { "Claimed & Trained": 3, "Promiscuous Plaything": 3, "Punish Me": 2 },
       "10d": { "Dungeon Master": 3, "Claimed & Trained": 3, "Punish Me": 3, "Provoker": 3 },
-      "10e": { "Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Heatwave": 3 }
+      "10e": { "Devoted Darling": 3, "Mood Multiplier": 2, "Tender Protector": 3, "Heatwave": 3 }
     }
   };
 
