--- a/quiz-new.html
+++ b/quiz-new.html
@@ -38,7 +38,7 @@
           <label><input type="radio" name="q2" value="2a"> One of us will dress up as the big spoon and the other will dress up as the little spoon</label>
           <label><input type="radio" name="q2" value="2b"> A horny devil</label>
           <label><input type="radio" name="q2" value="2c"> One of the Founding Fathers like John Hancock so you can call me daddy</label>
-          <label><input type="radio" name="q2" value="2d"> An ass-trologer that’s ruled by Uranus.</label>
+          <label><input type="radio" name="q2" value="2d"> An ass-trologer that’s ruled by Uranus</label>
           <label><input type="radio" name="q2" value="2e"> Moan-a-Lisa...Mmmm-mmh OHHHHHH</label>
           <label><input type="radio" name="q2" value="2f"> Catwoman because you're gonna hear this kitty purrr</label>
           <label><input type="radio" name="q2" value="2g"> A school girl because I’ll take out my ruler and maybe even teach you a lesson</label>
@@ -47,7 +47,7 @@
         <div class="question">
           <p>3. If sex had a menu, what would you order?</p>
           <label><input type="radio" name="q3" value="3a"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, and maybe a little whipped cream</label>
-          <label><input type="radio" name="q3" value="3b"> One-night stands, a striptease or lap dance, watching porn together, sexy role-play,and an assortment of new sex toys</label>
+          <label><input type="radio" name="q3" value="3b"> One-night stands, a striptease or lap dance, sexy role-play, and an assortment of new sex toys</label>
           <label><input type="radio" name="q3" value="3c"> BDSM, spanking, power exchange, naughty mind games, and a side of filthy dirty talk</label>
         </div>
 
