--- a/quiz-new.html
+++ b/quiz-new.html
@@ -46,7 +46,7 @@
 
         <div class="question">
           <p>3. If sex had a menu, what would you order?</p>
-          <label><input type="radio" name="q3" value="3a"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, and maybe a little whipped cream</label>
+          <label><input type="radio" name="q3" value="3a"> Passionate sex, sensual massage, pillow talk, cuddling, and maybe a little whipped cream</label>
           <label><input type="radio" name="q3" value="3b"> One-night stands, a striptease or lap dance, sexy role-play, and an assortment of new sex toys</label>
           <label><input type="radio" name="q3" value="3c"> BDSM, spanking, power exchange, naughty mind games, and a side of filthy dirty talk</label>
         </div>
