--- a/quiz-new.html
+++ b/quiz-new.html
@@ -39,7 +39,7 @@
           <label><input type="radio" name="q2" value="2b"> A horny devil</label>
           <label><input type="radio" name="q2" value="2c"> One of the Founding Fathers like John Hancock so you can call me daddy</label>
           <label><input type="radio" name="q2" value="2d"> An ass-trologer that’s ruled by Uranus</label>
-          <label><input type="radio" name="q2" value="2e"> Moan-a-Lisa...Mmmm-mmh OHHHHHH</label>
+          <label><input type="radio" name="q2" value="2e"> Moan-a-Lisa... OHHHHHH</label>
           <label><input type="radio" name="q2" value="2f"> Catwoman because you're gonna hear this kitty purrr</label>
           <label><input type="radio" name="q2" value="2g"> A school girl because I’ll take out my ruler and maybe even teach you a lesson</label>
         </div>
