--- a/Result-new.html
+++ b/Result-new.html
@@ -323,7 +323,7 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
     q9: {
       "9a": { "Dungeon Master": 6, "Charmer in Charge": 6, "Tender Protector": 6 },
       "9b": { "Claimed & Trained": 6, "Devoted Darling": 6, "Promiscuous Plaything": 6 },
-      "9c": { "Provoker": 6, "Bedroom Adventurer": 6, "Generous Giver": 6 },
+      "9c": { "Provoker": 6, "Bedroom Adventurer": 6, "Heatwave": 6 },
       "9d": { "Mood Multiplier": 6, "Generous Giver": 6, "Punish Me": 6 }
     },
     q10: {
